service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contador-app
spec:
  selector:
    app: contador-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
