route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: contador-app
spec:
  to:
    kind: Service
    name: contador-app
  port:
    targetPort: 8080
  tls:
    termination: edge
